kubernetes/apps/business/bighorn-byte/development/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bighorn-byte-development
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  hostnames:
    - development.bighornbyte.com
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https-bighornbyte
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: X-Robots-Tag
                value: noindex, nofollow
      backendRefs:
        - name: bighorn-byte-development
          port: 8000
